--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "version": "5.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm i; vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
-    "@mui/icons-material": "next",
+    "@mui/icons-material": "6.4.4",
     "@mui/material": "next",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-oidc-context": "3.2.0"
   },
   "devDependencies": {
     "@types/react": "latest",
