--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node": "^18.20.6",
     "npm": "^11.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
