--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "6.4.4",
-    "@mui/material": "next",
-    "react": "latest",
-    "react-dom": "latest",
+    "@mui/material": "^6.4.5",
+    "@react-router/node": "^7.2.0",
+    "@react-router/serve": "^7.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-oidc-context": "3.2.0",
     "react-router": "^7.2.0"
   },
   "devDependencies": {
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@vitejs/plugin-react": "latest",
-    "typescript": "latest",
-    "vite": "latest"
+    "@react-router/dev": "^7.2.0",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.1",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
