--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hey-api/client-fetch": "^0.8.1",
     "@mui/icons-material": "6.4.4",
     "@mui/material": "^6.4.5",
+    "@mui/x-date-pickers": "7.27.3",
     "@openapitools/openapi-generator-cli": "^2.16.3",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
