Implementing Private Route

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,5 @@ services:
     command: "npm run dev"
 
 networks:
-  default:
-    name: barber-shop-network
+  barber-shop-network:
     external: true
