--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.64.5",
     "@react-router/dev": "^7.2.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
