--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_KEYCLOAK_REALM="barbershop"
 VITE_KEYCLOAK_CLIENT="barbershop-front-end-client"
-VITE_KEYCLOAK_URL="http://localhost:8080/"
+#VITE_KEYCLOAK_URL="http://localhost:8080/"
+
+VITE_KEYCLOAK_URL=http://18.220.221.175:8080
